mobile main menu spacing fix

--- a/css/styles.css
+++ b/css/styles.css
@@ -406,6 +406,7 @@ footer a:hover {
 
   main h1  {
     margin-left: 2%;
+    margin-bottom: 0;
     padding: 0;
     font-size: 11vw;
   }
